[package]
name = "rtf-parser"
description = "A Rust RTF parser & lexer library designed for speed and memory efficiency."
repository = "https://github.com/d0rianb/rtf-parser"
version = "0.4.0"
edition = "2021"
license = "MIT"
keywords = ["rtf", "rich", "text", "format", "parser"]
categories = ["parsing", "parser-implementations"]
exclude = ["*.rtf", ".idea"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3

[profile.profiling]
inherits = "dev"
opt-level = 0
debug = true

[dependencies]
derivative = "2.2.0"
serde = { version = "1.0", optional = true, features = ["derive"] }

#[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
tsify = "0.4.5"


