[package]
name = "rtf-parser"
description = "A Rust RTF parser & lexer library designed for speed and memory efficiency."
repository = "https://github.com/d0rianb/rtf-parser"
version = "0.4.1"
edition = "2021"
license = "MIT"
keywords = ["rtf", "rich", "text", "format", "parser"]
categories = ["parsing", "parser-implementations"]
exclude = ["*.rtf", ".idea"]

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
opt-level = 3

[profile.profiling]
inherits = "dev"
opt-level = 0
debug = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }

#[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
tsify = "0.4.5"


